--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
           <div class="card-wrap">
             <a href="./pages/la_palette_menu.html">
               <article class="card">
+                <p class="new">Nouveau</p>
                 <img
                   src="img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                   alt="Image du restaurant"
@@ -85,51 +86,58 @@
                 </div>
               </article>
             </a>
-            <article class="card">
-              <img
-                src="img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                alt="Image du restaurant"
-              />
-              <div class="card-content">
-                <div class="card-title">
-                  <h3>La note enchantée</h3>
-                  <p>Charonne</p>
+            <a href="./pages/la_note_enchantee.html">
+              <article class="card">
+                <p class="new">Nouveau</p>
+                <img
+                  src="img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                  alt="Image du restaurant"
+                />
+                <div class="card-content">
+                  <div class="card-title">
+                    <h3>La note enchantée</h3>
+                    <p>Charonne</p>
+                  </div>
+                  <div class="btn-like">
+                    <i class="fa-regular fa-heart"></i>
+                  </div>
                 </div>
-                <div class="btn-like">
-                  <i class="fa-regular fa-heart"></i>
+              </article>
+            </a>
+            <a href="./pages/a_la_francaise.html">
+              <article class="card">
+                <img
+                  src="img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                  alt="Image du restaurant"
+                />
+                <div class="card-content">
+                  <div class="card-title">
+                    <h3>À la française</h3>
+                    <p>Cité Rouge</p>
+                  </div>
+                  <div class="btn-like">
+                    <i class="fa-regular fa-heart"></i>
+                  </div>
                 </div>
-              </div>
-            </article>
-            <article class="card">
-              <img
-                src="img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                alt="Image du restaurant"
-              />
-              <div class="card-content">
-                <div class="card-title">
-                  <h3>À la française</h3>
-                  <p>Cité Rouge</p>
+              </article>
+            </a>
+            <a href="./pages/le_delice_des_sens.html">
+              <article class="card">
+                <img
+                  src="img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                  alt="Image du restaurant"
+                />
+                <div class="card-content">
+                  <div class="card-title">
+                    <h3>Le délice des sens</h3>
+                    <p>Folie-Méricourt</p>
+                  </div>
+                  <div class="btn-like">
+                    <i class="fa-regular fa-heart"></i>
+                  </div>
                 </div>
-                <div class="btn-like">
-                  <i class="fa-regular fa-heart"></i>
-                </div>
-              </div>
-            </article>
-            <article class="card">
-              <img
-                src="img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                alt="Image du restaurant"
-              />
-              <div class="card-content">
-                <div class="card-title">
-                  <h3>Le délice des sens</h3>
-                  <p>Folie-Méricourt</p>
-                </div>
-                <div class="btn-like">
-                  <i class="fa-regular fa-heart"></i>
-                </div>
-              </div>
-            </article>
+              </article>
+            </a>
           </div>
         </section>
       </main>
