Strucuture HTML des pages menu + MAJ index.html

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <section class="restaurants">
           <h1>Restaurants</h1>
           <div class="card-wrap">
-            <a href="./pages/la_palette_menu.html">
+            <a href="./pages/la_palette_du_gout.html">
               <article class="card">
                 <p class="new">Nouveau</p>
                 <img
@@ -81,7 +81,7 @@
                     <p>Ménilmontant</p>
                   </div>
                   <div class="btn-like">
-                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-regular fa-heart fa-lg"></i>
                   </div>
                 </div>
               </article>
@@ -99,7 +99,7 @@
                     <p>Charonne</p>
                   </div>
                   <div class="btn-like">
-                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-regular fa-heart fa-lg"></i>
                   </div>
                 </div>
               </article>
@@ -116,7 +116,7 @@
                     <p>Cité Rouge</p>
                   </div>
                   <div class="btn-like">
-                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-regular fa-heart fa-lg"></i>
                   </div>
                 </div>
               </article>
@@ -133,7 +133,7 @@
                     <p>Folie-Méricourt</p>
                   </div>
                   <div class="btn-like">
-                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-regular fa-heart fa-lg"></i>
                   </div>
                 </div>
               </article>
