--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -24,15 +24,90 @@
     </header>
     <main>
       <img
+        class="restaurant-img"
         src="../img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
         alt="Image du restaurant"
       />
       <section class="menu-wrapper">
         <div class="menu-wrapper__title">
           <h1>À la française</h1>
-          <i class="fa-regular fa-heart"></i>
+          <div class="btn-like">
+            <i class="fa-regular fa-heart fa-lg"></i>
+          </div>
         </div>
-        <section class="entrees"></section>
+        <section class="section__wrapper entrees">
+          <h2><span>ENTR</span>ÉES</h2>
+          <article class="food__wrapper">
+            <h3>Tartare de poulpe acidulé</h3>
+            <div class="food__wrapper--content">
+              <h2>Aux zestes d'orange</h2>
+              <p>25€</p>
+            </div>
+          </article>
+          <article class="food__wrapper">
+            <h3>Velouté de légumes d'antan</h3>
+            <div class="food__wrapper--content">
+              <h2>Carotte, panais, topinambour</h2>
+              <p>35€</p>
+            </div>
+          </article>
+          <article class="food__wrapper">
+            <h3>Soupe à l'oignon</h3>
+            <div class="food__wrapper--content">
+              <h2>Revisitée</h2>
+              <p>20€</p>
+            </div>
+          </article>
+        </section>
+        <section class="section__wrapper plats">
+          <h2><span>PLAT</span>S</h2>
+          <article class="food__wrapper">
+            <h3>Coquilles Saint-Jacques</h3>
+            <div class="food__wrapper--content">
+              <h2>Accompagnées d'une purée de panais</h2>
+              <p>40€</p>
+            </div>
+          </article>
+          <article class="food__wrapper">
+            <h3>Magret de canard</h3>
+            <div class="food__wrapper--content">
+              <h2>Et parmentier de pommes de terre</h2>
+              <p>35€</p>
+            </div>
+          </article>
+          <article class="food__wrapper">
+            <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+            <div class="food__wrapper--content">
+              <h2>Sur son lit de gnocchis aux légumes</h2>
+              <p>44€</p>
+            </div>
+          </article>
+        </section>
+        <section class="section__wrapper desserts">
+          <h2><span>DESS</span>ERTS</h2>
+          <article class="food__wrapper">
+            <h3>Pétales de violettes glacés</h3>
+            <div class="food__wrapper--content">
+              <h2>Et purée de noisettes</h2>
+              <p>18€</p>
+            </div>
+          </article>
+          <article class="food__wrapper">
+            <h3>Fondant au chocolat</h3>
+            <div class="food__wrapper--content">
+              <h2>Revisité</h2>
+              <p>22€</p>
+            </div>
+          </article>
+          <article class="food__wrapper">
+            <h3>Millefeuille croustillant</h3>
+            <div class="food__wrapper--content">
+              <h2>Myrtilles et pâte d’amande</h2>
+              <p>23€</p>
+            </div>
+          </article>
+        </section>
+        <button class="btn-primary">Commander</button>
       </section>
     </main>
     <footer class="footer-bar">
