--- a/pages/le_delice_des_sens.html
+++ b/pages/le_delice_des_sens.html
@@ -24,15 +24,90 @@
     </header>
     <main>
       <img
+        class="restaurant-img"
         src="../img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
         alt="Image du restaurant"
       />
       <section class="menu-wrapper">
         <div class="menu-wrapper__title">
           <h1>Le délice des sens</h1>
-          <i class="fa-regular fa-heart"></i>
+          <div class="btn-like">
+            <i class="fa-regular fa-heart fa-lg"></i>
+          </div>
         </div>
-        <section class="entrees"></section>
+        <section class="section__wrapper entrees">
+          <h2><span>ENTR</span>ÉES</h2>
+          <article class="food__wrapper">
+            <h3>Tartare de thon</h3>
+            <div class="food__wrapper--content">
+              <h2>Assaisonné au yuzu</h2>
+              <p>25€</p>
+            </div>
+          </article>
+          <article class="food__wrapper">
+            <h3>Bouchée de homard croustillant</h3>
+            <div class="food__wrapper--content">
+              <h2>Et sa farandole de petits légumes</h2>
+              <p>35€</p>
+            </div>
+          </article>
+          <article class="food__wrapper">
+            <h3>Velouté de cèpes</h3>
+            <div class="food__wrapper--content">
+              <h2>Aux truffes</h2>
+              <p>20€</p>
+            </div>
+          </article>
+        </section>
+        <section class="section__wrapper plats">
+          <h2><span>PLAT</span>S</h2>
+          <article class="food__wrapper">
+            <h3>Poulet rôti aux herbes de Provence</h3>
+            <div class="food__wrapper--content">
+              <h2>Et sa crème de truffe</h2>
+              <p>40€</p>
+            </div>
+          </article>
+          <article class="food__wrapper">
+            <h3>Langouste rôtie</h3>
+            <div class="food__wrapper--content">
+              <h2>Et ses légumes de saison</h2>
+              <p>35€</p>
+            </div>
+          </article>
+          <article class="food__wrapper">
+            <h3>Côte de bœuf Angus</h3>
+            <div class="food__wrapper--content">
+              <h2>Et sa purée de panais</h2>
+              <p>44€</p>
+            </div>
+          </article>
+        </section>
+        <section class="section__wrapper desserts">
+          <h2><span>DESS</span>ERTS</h2>
+          <article class="food__wrapper">
+            <h3>Farandole de desserts</h3>
+            <div class="food__wrapper--content">
+              <h2>Du chef</h2>
+              <p>18€</p>
+            </div>
+          </article>
+          <article class="food__wrapper">
+            <h3>Crème brulée</h3>
+            <div class="food__wrapper--content">
+              <h2>Revisitée</h2>
+              <p>22€</p>
+            </div>
+          </article>
+          <article class="food__wrapper">
+            <h3>Tiramisu</h3>
+            <div class="food__wrapper--content">
+              <h2>À la noisette</h2>
+              <p>23€</p>
+            </div>
+          </article>
+        </section>
+        <button class="btn-primary">Commander</button>
       </section>
     </main>
     <footer class="footer-bar">
