--- a/pages/la_palette_du_gout.html
+++ b/pages/la_palette_du_gout.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Menu - La note enchantée</title>
+    <title>Menu - La palette du goût</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -25,12 +25,12 @@
     <main>
       <img
         class="restaurant-img"
-        src="../img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+        src="../img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
         alt="Image du restaurant"
       />
       <section class="menu-wrapper">
         <div class="menu-wrapper__title">
-          <h1>La note enchantée</h1>
+          <h1>La palette du goût</h1>
           <div class="btn-like">
             <i class="fa-regular fa-heart fa-lg"></i>
           </div>
@@ -38,54 +38,47 @@
         <section class="section__wrapper entrees">
           <h2><span>ENTR</span>ÉES</h2>
           <article class="food__wrapper">
-            <h3>Ravioles de foie gras</h3>
+            <h3>Fricassée d'escargots</h3>
             <div class="food__wrapper--content">
-              <h2>Accompagnées de leur crème à la truffee</h2>
+              <h2>Au piment d'Espelette</h2>
               <p>25€</p>
             </div>
           </article>
           <article class="food__wrapper">
-            <h3>Caviar osciètre</h3>
+            <h3>Foie gras de canard mi-cuit</h3>
             <div class="food__wrapper--content">
-              <h2>Sur blini à la farine de blé noir</h2>
+              <h2>Et ses copeaux de truffe noire</h2>
               <p>35€</p>
             </div>
           </article>
           <article class="food__wrapper">
-            <h3>Homard et espuma de potiron</h3>
+            <h3>Œuf au plat</h3>
             <div class="food__wrapper--content">
-              <h2>Marinés aux zestes d'orange</h2>
+              <h2>Assaisonné à la truffe sur lit de caviar</h2>
               <p>20€</p>
-            </div>
-          </article>
-          <article class="food__wrapper">
-            <h3>Foie gras de canard cuit entier</h3>
-            <div class="food__wrapper--content">
-              <h2>Confiture de figue et pain toasté</h2>
-              <p>35€</p>
             </div>
           </article>
         </section>
         <section class="section__wrapper plats">
           <h2><span>PLAT</span>S</h2>
           <article class="food__wrapper">
-            <h3>Noix de coquilles Saint-Jacques</h3>
+            <h3>Filet de bœuf aux herbes</h3>
             <div class="food__wrapper--content">
-              <h2>Sur lit de purée de céleri-rave</h2>
+              <h2>Accompagné de sa ribambelle de légumes</h2>
               <p>40€</p>
             </div>
           </article>
           <article class="food__wrapper">
-            <h3>Langoustine poêlée</h3>
+            <h3>Parmentier de queue de bœuf</h3>
             <div class="food__wrapper--content">
-              <h2>Purée de patate douce</h2>
+              <h2>À la truffe noire sur sa purée de panais</h2>
               <p>35€</p>
             </div>
           </article>
           <article class="food__wrapper">
-            <h3>Mijoté de queue de bœuf</h3>
+            <h3>Filet de turbot</h3>
             <div class="food__wrapper--content">
-              <h2>Et riz sauvage aux zestes de citron</h2>
+              <h2>Aux agrumes</h2>
               <p>44€</p>
             </div>
           </article>
@@ -93,23 +86,23 @@
         <section class="section__wrapper desserts">
           <h2><span>DESS</span>ERTS</h2>
           <article class="food__wrapper">
-            <h3>Macaron noisette et chocolat</h3>
+            <h3>Paris-Brest</h3>
             <div class="food__wrapper--content">
-              <h2>Glace au caramel brun et sel de Guérande</h2>
+              <h2>Revisité</h2>
               <p>18€</p>
             </div>
           </article>
           <article class="food__wrapper">
-            <h3>Baba au rhum revisité</h3>
+            <h3>Macaron au chocolat d'exception</h3>
             <div class="food__wrapper--content">
-              <h2>Avec son coulis de citron</h2>
+              <h2>Et glace à la vanille de Madagascar</h2>
               <p>22€</p>
             </div>
           </article>
           <article class="food__wrapper">
-            <h3>Tarte au citron meringuée</h3>
+            <h3>Mousse au chocolat</h3>
             <div class="food__wrapper--content">
-              <h2>Déstructurée</h2>
+              <h2>Au piment d'Espelette et à la truffe noire</h2>
               <p>23€</p>
             </div>
           </article>
