Debut d'implementation du responsive sur l'index

--- a/index.html
+++ b/index.html
@@ -155,8 +155,10 @@
             Devenir partenaire
           </a>
         </div>
-        <a href="#">Mentions légales </a>
-        <a href="mailto:ohmyfood@mail.fr">Contact</a>
+        <div class="footer-content__text">
+          <a href="#">Mentions légales </a>
+          <a href="mailto:ohmyfood@mail.fr">Contact</a>
+        </div>
       </div>
     </footer>
   </body>
