--- a/index.html
+++ b/index.html
@@ -66,78 +66,80 @@
           </div>
         </section>
         <section class="restaurants">
-          <h1>Restaurants</h1>
-          <div class="card-wrap">
-            <a href="./pages/la_palette_du_gout.html">
-              <article class="card">
-                <p class="new">Nouveau</p>
-                <img
-                  src="img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                  alt="Image du restaurant"
-                />
-                <div class="card-content">
-                  <div class="card-title">
-                    <h3>La palette du goût</h3>
-                    <p>Ménilmontant</p>
+          <div class="restaurants-wrapper">
+            <h1>Restaurants</h1>
+            <div class="card-wrap">
+              <a href="./pages/la_palette_du_gout.html">
+                <article class="card">
+                  <p class="new">Nouveau</p>
+                  <img
+                    src="img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                    alt="Image du restaurant"
+                  />
+                  <div class="card-content">
+                    <div class="card-title">
+                      <h3>La palette du goût</h3>
+                      <p>Ménilmontant</p>
+                    </div>
+                    <div class="btn-like">
+                      <i class="fa-regular fa-heart fa-lg"></i>
+                    </div>
                   </div>
-                  <div class="btn-like">
-                    <i class="fa-regular fa-heart fa-lg"></i>
+                </article>
+              </a>
+              <a href="./pages/la_note_enchantee.html">
+                <article class="card">
+                  <p class="new">Nouveau</p>
+                  <img
+                    src="img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                    alt="Image du restaurant"
+                  />
+                  <div class="card-content">
+                    <div class="card-title">
+                      <h3>La note enchantée</h3>
+                      <p>Charonne</p>
+                    </div>
+                    <div class="btn-like">
+                      <i class="fa-regular fa-heart fa-lg"></i>
+                    </div>
                   </div>
-                </div>
-              </article>
-            </a>
-            <a href="./pages/la_note_enchantee.html">
-              <article class="card">
-                <p class="new">Nouveau</p>
-                <img
-                  src="img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                  alt="Image du restaurant"
-                />
-                <div class="card-content">
-                  <div class="card-title">
-                    <h3>La note enchantée</h3>
-                    <p>Charonne</p>
+                </article>
+              </a>
+              <a href="./pages/a_la_francaise.html">
+                <article class="card">
+                  <img
+                    src="img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                    alt="Image du restaurant"
+                  />
+                  <div class="card-content">
+                    <div class="card-title">
+                      <h3>À la française</h3>
+                      <p>Cité Rouge</p>
+                    </div>
+                    <div class="btn-like">
+                      <i class="fa-regular fa-heart fa-lg"></i>
+                    </div>
                   </div>
-                  <div class="btn-like">
-                    <i class="fa-regular fa-heart fa-lg"></i>
+                </article>
+              </a>
+              <a href="./pages/le_delice_des_sens.html">
+                <article class="card">
+                  <img
+                    src="img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                    alt="Image du restaurant"
+                  />
+                  <div class="card-content">
+                    <div class="card-title">
+                      <h3>Le délice des sens</h3>
+                      <p>Folie-Méricourt</p>
+                    </div>
+                    <div class="btn-like">
+                      <i class="fa-regular fa-heart fa-lg"></i>
+                    </div>
                   </div>
-                </div>
-              </article>
-            </a>
-            <a href="./pages/a_la_francaise.html">
-              <article class="card">
-                <img
-                  src="img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                  alt="Image du restaurant"
-                />
-                <div class="card-content">
-                  <div class="card-title">
-                    <h3>À la française</h3>
-                    <p>Cité Rouge</p>
-                  </div>
-                  <div class="btn-like">
-                    <i class="fa-regular fa-heart fa-lg"></i>
-                  </div>
-                </div>
-              </article>
-            </a>
-            <a href="./pages/le_delice_des_sens.html">
-              <article class="card">
-                <img
-                  src="img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                  alt="Image du restaurant"
-                />
-                <div class="card-content">
-                  <div class="card-title">
-                    <h3>Le délice des sens</h3>
-                    <p>Folie-Méricourt</p>
-                  </div>
-                  <div class="btn-like">
-                    <i class="fa-regular fa-heart fa-lg"></i>
-                  </div>
-                </div>
-              </article>
-            </a>
+                </article>
+              </a>
+            </div>
           </div>
         </section>
       </main>
