--- a/pages/la_note_enchantee.html
+++ b/pages/la_note_enchantee.html
@@ -120,16 +120,20 @@
     <footer class="footer-bar">
       <h2>ohmyfood</h2>
       <div class="footer-content">
-        <a href="#">
-          <i class="fa-solid fa-utensils"></i>
-          Proposer un restaurant
-        </a>
-        <a href="#">
-          <i class="fa-solid fa-handshake-angle"></i>
-          Devenir partenaire
-        </a>
-        <a href="#">Mentions légales </a>
-        <a href="#">Contact</a>
+        <div class="footer-content__icons">
+          <a href="#">
+            <i class="fa-solid fa-utensils"></i>
+            Proposer un restaurant
+          </a>
+          <a href="#">
+            <i class="fa-solid fa-handshake-angle"></i>
+            Devenir partenaire
+          </a>
+        </div>
+        <div class="footer-content__text">
+          <a href="#">Mentions légales </a>
+          <a href="mailto:ohmyfood@mail.fr">Contact</a>
+        </div>
       </div>
     </footer>
   </body>
