--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
                       <p>Ménilmontant</p>
                     </div>
                     <div class="btn-like">
-                      <i class="fa-regular fa-heart fa-lg"></i>
+                      <i class="fa-regular fa-heart fa-lg empty-heart"></i>
+                      <i
+                        class="fa-solid fa-heart fa-lg fa-beat-fade full-heart"
+                      ></i>
                     </div>
                   </div>
                 </article>
@@ -100,7 +103,10 @@
                       <p>Charonne</p>
                     </div>
                     <div class="btn-like">
-                      <i class="fa-regular fa-heart fa-lg"></i>
+                      <i class="fa-regular fa-heart fa-lg empty-heart"></i>
+                      <i
+                        class="fa-solid fa-heart fa-lg fa-beat-fade full-heart"
+                      ></i>
                     </div>
                   </div>
                 </article>
@@ -117,7 +123,10 @@
                       <p>Cité Rouge</p>
                     </div>
                     <div class="btn-like">
-                      <i class="fa-regular fa-heart fa-lg"></i>
+                      <i class="fa-regular fa-heart fa-lg empty-heart"></i>
+                      <i
+                        class="fa-solid fa-heart fa-lg fa-beat-fade full-heart"
+                      ></i>
                     </div>
                   </div>
                 </article>
@@ -134,7 +143,10 @@
                       <p>Folie-Méricourt</p>
                     </div>
                     <div class="btn-like">
-                      <i class="fa-regular fa-heart fa-lg"></i>
+                      <i class="fa-regular fa-heart fa-lg empty-heart"></i>
+                      <i
+                        class="fa-solid fa-heart fa-lg fa-beat-fade full-heart"
+                      ></i>
                     </div>
                   </div>
                 </article>
