--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -29,11 +29,10 @@
         alt="Image du restaurant"
       />
       <section class="menu-wrapper">
-        <div class="menu-wrapper__title">
-          <h1>À la française</h1>
-          <div class="btn-like">
-            <i class="fa-regular fa-heart fa-lg"></i>
-          </div>
+        <div class="btn-like">
+          <i class="fa-regular fa-heart fa-lg empty-heart"></i>
+          <i class="fa-solid fa-heart fa-lg fa-beat-fade full-heart"></i>
+        </div>
         </div>
         <section class="section__wrapper entrees">
           <h2><span>ENTR</span>ÉES</h2>
