Implementation du loader

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <div class="loader">
+      <i class="fa-solid fa-spinner"></i>
+    </div>
     <div class="main-container">
       <header class="header-bar">
         <a href="index.html">
