Mis en place du checkmark + Animation section menu

--- a/pages/la_palette_du_gout.html
+++ b/pages/la_palette_du_gout.html
@@ -44,6 +44,9 @@
               <h2>Au piment d'Espelette</h2>
               <p>25€</p>
             </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
+            </div>
           </article>
           <article class="food__wrapper">
             <h3>Foie gras de canard mi-cuit</h3>
@@ -51,12 +54,18 @@
               <h2>Et ses copeaux de truffe noire</h2>
               <p>35€</p>
             </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
+            </div>
           </article>
           <article class="food__wrapper">
             <h3>Œuf au plat</h3>
             <div class="food__wrapper--content">
               <h2>Assaisonné à la truffe sur lit de caviar</h2>
               <p>20€</p>
+            </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
             </div>
           </article>
         </section>
@@ -68,6 +77,9 @@
               <h2>Accompagné de sa ribambelle de légumes</h2>
               <p>40€</p>
             </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
+            </div>
           </article>
           <article class="food__wrapper">
             <h3>Parmentier de queue de bœuf</h3>
@@ -75,12 +87,18 @@
               <h2>À la truffe noire sur sa purée de panais</h2>
               <p>35€</p>
             </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
+            </div>
           </article>
           <article class="food__wrapper">
             <h3>Filet de turbot</h3>
             <div class="food__wrapper--content">
               <h2>Aux agrumes</h2>
               <p>44€</p>
+            </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
             </div>
           </article>
         </section>
@@ -92,6 +110,9 @@
               <h2>Revisité</h2>
               <p>18€</p>
             </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
+            </div>
           </article>
           <article class="food__wrapper">
             <h3>Macaron au chocolat d'exception</h3>
@@ -99,12 +120,18 @@
               <h2>Et glace à la vanille de Madagascar</h2>
               <p>22€</p>
             </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
+            </div>
           </article>
           <article class="food__wrapper">
             <h3>Mousse au chocolat</h3>
             <div class="food__wrapper--content">
               <h2>Au piment d'Espelette et à la truffe noire</h2>
               <p>23€</p>
+            </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
             </div>
           </article>
         </section>
