--- a/pages/le_delice_des_sens.html
+++ b/pages/le_delice_des_sens.html
@@ -44,6 +44,9 @@
               <h2>Assaisonné au yuzu</h2>
               <p>25€</p>
             </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
+            </div>
           </article>
           <article class="food__wrapper">
             <h3>Bouchée de homard croustillant</h3>
@@ -51,12 +54,18 @@
               <h2>Et sa farandole de petits légumes</h2>
               <p>35€</p>
             </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
+            </div>
           </article>
           <article class="food__wrapper">
             <h3>Velouté de cèpes</h3>
             <div class="food__wrapper--content">
               <h2>Aux truffes</h2>
               <p>20€</p>
+            </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
             </div>
           </article>
         </section>
@@ -68,6 +77,9 @@
               <h2>Et sa crème de truffe</h2>
               <p>40€</p>
             </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
+            </div>
           </article>
           <article class="food__wrapper">
             <h3>Langouste rôtie</h3>
@@ -75,12 +87,18 @@
               <h2>Et ses légumes de saison</h2>
               <p>35€</p>
             </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
+            </div>
           </article>
           <article class="food__wrapper">
             <h3>Côte de bœuf Angus</h3>
             <div class="food__wrapper--content">
               <h2>Et sa purée de panais</h2>
               <p>44€</p>
+            </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
             </div>
           </article>
         </section>
@@ -92,6 +110,9 @@
               <h2>Du chef</h2>
               <p>18€</p>
             </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
+            </div>
           </article>
           <article class="food__wrapper">
             <h3>Crème brulée</h3>
@@ -99,12 +120,18 @@
               <h2>Revisitée</h2>
               <p>22€</p>
             </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
+            </div>
           </article>
           <article class="food__wrapper">
             <h3>Tiramisu</h3>
             <div class="food__wrapper--content">
               <h2>À la noisette</h2>
               <p>23€</p>
+            </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
             </div>
           </article>
         </section>
