--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -29,10 +29,12 @@
         alt="Image du restaurant"
       />
       <section class="menu-wrapper">
-        <div class="btn-like">
-          <i class="fa-regular fa-heart fa-lg empty-heart"></i>
-          <i class="fa-solid fa-heart fa-lg fa-beat-fade full-heart"></i>
-        </div>
+        <div class="menu-wrapper__title">
+          <h1>À la française</h1>
+          <div class="btn-like">
+            <i class="fa-regular fa-heart fa-lg empty-heart"></i>
+            <i class="fa-solid fa-heart fa-lg fa-beat-fade full-heart"></i>
+          </div>
         </div>
         <section class="section__wrapper entrees">
           <h2><span>ENTR</span>ÉES</h2>
@@ -42,6 +44,9 @@
               <h2>Aux zestes d'orange</h2>
               <p>25€</p>
             </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
+            </div>
           </article>
           <article class="food__wrapper">
             <h3>Velouté de légumes d'antan</h3>
@@ -49,12 +54,18 @@
               <h2>Carotte, panais, topinambour</h2>
               <p>35€</p>
             </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
+            </div>
           </article>
           <article class="food__wrapper">
             <h3>Soupe à l'oignon</h3>
             <div class="food__wrapper--content">
               <h2>Revisitée</h2>
               <p>20€</p>
+            </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
             </div>
           </article>
         </section>
@@ -66,6 +77,9 @@
               <h2>Accompagnées d'une purée de panais</h2>
               <p>40€</p>
             </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
+            </div>
           </article>
           <article class="food__wrapper">
             <h3>Magret de canard</h3>
@@ -73,12 +87,18 @@
               <h2>Et parmentier de pommes de terre</h2>
               <p>35€</p>
             </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
+            </div>
           </article>
           <article class="food__wrapper">
             <h3>Pigeonneau d’Ille-et-Vilaine</h3>
             <div class="food__wrapper--content">
               <h2>Sur son lit de gnocchis aux légumes</h2>
               <p>44€</p>
+            </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
             </div>
           </article>
         </section>
@@ -90,6 +110,9 @@
               <h2>Et purée de noisettes</h2>
               <p>18€</p>
             </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
+            </div>
           </article>
           <article class="food__wrapper">
             <h3>Fondant au chocolat</h3>
@@ -97,12 +120,18 @@
               <h2>Revisité</h2>
               <p>22€</p>
             </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
+            </div>
           </article>
           <article class="food__wrapper">
             <h3>Millefeuille croustillant</h3>
             <div class="food__wrapper--content">
               <h2>Myrtilles et pâte d’amande</h2>
               <p>23€</p>
+            </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
             </div>
           </article>
         </section>
