--- a/pages/la_note_enchantee.html
+++ b/pages/la_note_enchantee.html
@@ -44,12 +44,18 @@
               <h2>Accompagnées de leur crème à la truffee</h2>
               <p>25€</p>
             </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
+            </div>
           </article>
           <article class="food__wrapper">
             <h3>Caviar osciètre</h3>
             <div class="food__wrapper--content">
               <h2>Sur blini à la farine de blé noir</h2>
               <p>35€</p>
+            </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
             </div>
           </article>
           <article class="food__wrapper">
@@ -58,12 +64,18 @@
               <h2>Marinés aux zestes d'orange</h2>
               <p>20€</p>
             </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
+            </div>
           </article>
           <article class="food__wrapper">
             <h3>Foie gras de canard cuit entier</h3>
             <div class="food__wrapper--content">
               <h2>Confiture de figue et pain toasté</h2>
               <p>35€</p>
+            </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
             </div>
           </article>
         </section>
@@ -75,6 +87,9 @@
               <h2>Sur lit de purée de céleri-rave</h2>
               <p>40€</p>
             </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
+            </div>
           </article>
           <article class="food__wrapper">
             <h3>Langoustine poêlée</h3>
@@ -82,12 +97,18 @@
               <h2>Purée de patate douce</h2>
               <p>35€</p>
             </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
+            </div>
           </article>
           <article class="food__wrapper">
             <h3>Mijoté de queue de bœuf</h3>
             <div class="food__wrapper--content">
               <h2>Et riz sauvage aux zestes de citron</h2>
               <p>44€</p>
+            </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
             </div>
           </article>
         </section>
@@ -99,6 +120,9 @@
               <h2>Glace au caramel brun et sel de Guérande</h2>
               <p>18€</p>
             </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
+            </div>
           </article>
           <article class="food__wrapper">
             <h3>Baba au rhum revisité</h3>
@@ -106,12 +130,18 @@
               <h2>Avec son coulis de citron</h2>
               <p>22€</p>
             </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
+            </div>
           </article>
           <article class="food__wrapper">
             <h3>Tarte au citron meringuée</h3>
             <div class="food__wrapper--content">
               <h2>Déstructurée</h2>
               <p>23€</p>
+            </div>
+            <div class="checkmark">
+              <i class="fa-solid fa-circle-check fa-lg"></i>
             </div>
           </article>
         </section>
