MAJ animation Like Button, Loader

--- a/index.html
+++ b/index.html
@@ -86,9 +86,7 @@
                     </div>
                     <div class="btn-like">
                       <i class="fa-regular fa-heart fa-lg empty-heart"></i>
-                      <i
-                        class="fa-solid fa-heart fa-lg fa-beat-fade full-heart"
-                      ></i>
+                      <i class="fa-solid fa-heart fa-lg full-heart"></i>
                     </div>
                   </div>
                 </article>
@@ -107,9 +105,7 @@
                     </div>
                     <div class="btn-like">
                       <i class="fa-regular fa-heart fa-lg empty-heart"></i>
-                      <i
-                        class="fa-solid fa-heart fa-lg fa-beat-fade full-heart"
-                      ></i>
+                      <i class="fa-solid fa-heart fa-lg full-heart"></i>
                     </div>
                   </div>
                 </article>
@@ -127,9 +123,7 @@
                     </div>
                     <div class="btn-like">
                       <i class="fa-regular fa-heart fa-lg empty-heart"></i>
-                      <i
-                        class="fa-solid fa-heart fa-lg fa-beat-fade full-heart"
-                      ></i>
+                      <i class="fa-solid fa-heart fa-lg full-heart"></i>
                     </div>
                   </div>
                 </article>
@@ -147,9 +141,7 @@
                     </div>
                     <div class="btn-like">
                       <i class="fa-regular fa-heart fa-lg empty-heart"></i>
-                      <i
-                        class="fa-solid fa-heart fa-lg fa-beat-fade full-heart"
-                      ></i>
+                      <i class="fa-solid fa-heart fa-lg full-heart"></i>
                     </div>
                   </div>
                 </article>
