--- a/pages/la_note_enchantee.html
+++ b/pages/la_note_enchantee.html
@@ -33,7 +33,7 @@
           <h1>La note enchantée</h1>
           <div class="btn-like">
             <i class="fa-regular fa-heart fa-lg empty-heart"></i>
-            <i class="fa-solid fa-heart fa-lg fa-beat-fade full-heart"></i>
+            <i class="fa-solid fa-heart fa-lg full-heart"></i>
           </div>
         </div>
         <section class="section__wrapper entrees">
