Modification suite soutenance (footer, checkmark, w3c)

--- a/index.html
+++ b/index.html
@@ -50,21 +50,21 @@
                 <p>1</p>
               </div>
               <i class="fa-solid fa-mobile-screen-button"></i>
-              <p>Choisissez un restaurant</p>
+              <h2>Choisissez un restaurant</h2>
             </article>
             <article class="button-wrap">
               <div class="round-number">
                 <p>2</p>
               </div>
               <i class="fa-solid fa-list"></i>
-              <p>Composez votre menu</p>
+              <h2>Composez votre menu</h2>
             </article>
             <article class="button-wrap">
               <div class="round-number">
                 <p>3</p>
               </div>
               <i class="fa-solid fa-store"></i>
-              <p>Choisissez un restaurant</p>
+              <h2>Dégustez au restaurant</h2>
             </article>
           </div>
         </section>
@@ -150,25 +150,25 @@
           </div>
         </section>
       </main>
+      <footer class="footer-bar">
+        <h2>ohmyfood</h2>
+        <div class="footer-content">
+          <div class="footer-content__icons">
+            <a href="#">
+              <i class="fa-solid fa-utensils"></i>
+              Proposer un restaurant
+            </a>
+            <a href="#">
+              <i class="fa-solid fa-handshake-angle"></i>
+              Devenir partenaire
+            </a>
+          </div>
+          <div class="footer-content__text">
+            <a href="#">Mentions légales </a>
+            <a href="mailto:ohmyfood@mail.fr">Contact</a>
+          </div>
+        </div>
+      </footer>
     </div>
-    <footer class="footer-bar">
-      <h2>ohmyfood</h2>
-      <div class="footer-content">
-        <div class="footer-content__icons">
-          <a href="#">
-            <i class="fa-solid fa-utensils"></i>
-            Proposer un restaurant
-          </a>
-          <a href="#">
-            <i class="fa-solid fa-handshake-angle"></i>
-            Devenir partenaire
-          </a>
-        </div>
-        <div class="footer-content__text">
-          <a href="#">Mentions légales </a>
-          <a href="mailto:ohmyfood@mail.fr">Contact</a>
-        </div>
-      </div>
-    </footer>
   </body>
 </html>
